--- a/src/blocks/btn/btn.scss
+++ b/src/blocks/btn/btn.scss
@@ -194,7 +194,7 @@
     height: 40px;
     padding: 0 16px 0 16px;
     color: $tw-white;
-    background-color: $tw-slate;
+    background-color: $tw-slate-800;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     transition: max-width $transition-time;
