--- a/src/blocks/field-toggler/field-toggler.scss
+++ b/src/blocks/field-toggler/field-toggler.scss
@@ -86,7 +86,7 @@
     }
 
     @at-root input:checked ~ &::before {
-      background-color: $tw-green;
+      background-color: $tw-green-500;
     }
 
     @at-root input:disabled ~ &::after {
