--- a/src/blocks/range-slider/range-slider.scss
+++ b/src/blocks/range-slider/range-slider.scss
@@ -23,7 +23,7 @@
   }
 
   .noUi-connect {
-    background-color: $tw-green;
+    background-color: $tw-green-500;
   }
 
   .noUi-handle {
@@ -31,7 +31,7 @@
     height: 10px;
     top: 0;
     right: -5px;
-    border: 2px solid $tw-green;
+    border: 2px solid $tw-green-500;
     border-radius: 3px;
     transform: translateY(-50%);
     cursor: pointer;
