--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -60,15 +60,18 @@ block content
                             +field-text({
                               mods: 'price, price-from',
                               val: '',
+                              hasViewField: true,
                               attrs: {
                                 name: 'arrFilter_P1_MIN',
-                                class: 'col-start-1 col-end-2',
-                                id: "arrFilter_P1_MIN"
+                                class: 'col-start-1 col-end-2 test',
+                                id: 'arrFilter_P1_MIN',
+                                onkeyup: 'test(this)'
                               }
                             })
                             +field-text({
                               mods: 'price, price-to',
                               val: '',
+                              hasViewField: true,
                               attrs: {
                                 name: 'arrFilter_P1_MAX',
                                 class: 'col-start-2 col-end-3',
@@ -198,7 +201,10 @@ block content
 //-   p footer
 
 block prepend page-bottom
+  script
+    include ../js/range-slider.js
   .inline-svg-sprite
     include ../blocks/sprite-svg-inline/img/sprite-inline.svg
   script(src='https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=bd455aa8-6a1c-4570-a04d-5a21c9e76f7e')
+
 
