--- a/src/blocks/catalog/catalog.scss
+++ b/src/blocks/catalog/catalog.scss
@@ -18,7 +18,7 @@
         width: 10px;
         height: 10px;
         border: 3px solid #fff;
-        background-color: $tw-red;
+        background-color: $tw-red-900;
         border-radius: 50%;
       }
 
