--- a/src/blocks/info-tip/info-tip.scss
+++ b/src/blocks/info-tip/info-tip.scss
@@ -15,6 +15,12 @@
     fill: none;
     stroke: $tw-gray-300;
   }
+
+  &:hover {
+    svg {
+      stroke: $tw-blue_link;
+    }
+  }
 }
 
 .tippy-box[data-theme~='info-tip'] {
@@ -48,5 +54,9 @@
         width: 300px;
       }
     }
+  }
+
+  .article & {
+    color: $tw-gray-500;
   }
 }
