--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -114,7 +114,7 @@
 
   &__footer-wrapper {
     flex-shrink: 0;
-    background-color: $tw-slate;
+    background-color: $tw-slate-800;
 
     @media (min-width: $screen-lg) {
       display: flex;
@@ -914,6 +914,8 @@ body {}
     .screen-low & .section__title {
       margin-top: 0;
       margin-bottom: 0;
+      position: relative;
+      z-index: 10;
     }
 
     @media (min-width: $onepage-width) {
