--- a/src/blocks/switcher/switcher.scss
+++ b/src/blocks/switcher/switcher.scss
@@ -105,7 +105,7 @@
   }
 
   & .dropdown-menu {
-    background-color: $tw-slate;
+    background-color: $tw-slate-800;
   }
 
   & .switcher__value {
