--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -3,15 +3,51 @@ $tw-inherit: undefined;
 $tw-current: undefined; 
 $tw-transparent: undefined; 
 $tw-black: #14142B; 
-$tw-slate: #181828; 
+$tw-slate-50: #f8fafc; 
+$tw-slate-100: #f1f5f9; 
+$tw-slate-200: #EBF3F6; 
+$tw-slate-300: #cbd5e1; 
+$tw-slate-400: #94a3b8; 
+$tw-slate-500: #64748b; 
+$tw-slate-600: #475569; 
+$tw-slate-700: #334155; 
+$tw-slate-800: #181828; 
+$tw-slate-900: #0f172a; 
 $tw-white: #fff; 
 $tw-neutral: undefined; 
-$tw-red: #ff0000; 
+$tw-red-50: #FFF5F5; 
+$tw-red-100: #fee2e2; 
+$tw-red-200: #fecaca; 
+$tw-red-300: #fca5a5; 
+$tw-red-400: #f87171; 
+$tw-red-500: #EC6565; 
+$tw-red-600: #dc2626; 
+$tw-red-700: #b91c1c; 
+$tw-red-800: #991b1b; 
+$tw-red-900: #ff0000; 
 $tw-orange: undefined; 
 $tw-amber: undefined; 
-$tw-yellow: #CFB428; 
+$tw-yellow-50: #FFFDEE; 
+$tw-yellow-100: #fef9c3; 
+$tw-yellow-200: #fef08a; 
+$tw-yellow-300: #fde047; 
+$tw-yellow-400: #facc15; 
+$tw-yellow-500: #CFB428; 
+$tw-yellow-600: #ca8a04; 
+$tw-yellow-700: #a16207; 
+$tw-yellow-800: #854d0e; 
+$tw-yellow-900: #713f12; 
 $tw-lime: undefined; 
-$tw-green: #28CFA7; 
+$tw-green-50: #F3F6ED; 
+$tw-green-100: #dcfce7; 
+$tw-green-200: #bbf7d0; 
+$tw-green-300: #94A76D; 
+$tw-green-400: #4ade80; 
+$tw-green-500: #28CFA7; 
+$tw-green-600: #16a34a; 
+$tw-green-700: #15803d; 
+$tw-green-800: #166534; 
+$tw-green-900: #14532d; 
 $tw-emerald: undefined; 
 $tw-teal: undefined; 
 $tw-cyan: undefined; 
