--- a/src/blocks/btn/btn.pug
+++ b/src/blocks/btn/btn.pug
@@ -75,5 +75,5 @@ mixin btn-download-light(props={},mods)
     }
 
   +btn(
-    `<svg class="icon" width="24" height="24"><use xlink:href="img/sprite.svg#folder-cloud"></use></svg> <span>${props.text}</span>`,
+    `<svg class="icon" width="19" height="19"><use xlink:href="img/sprite.svg#document-cloud"></use></svg> <span>${props.text}</span>`,
     'regular, icon, download')(class='text-black bg-white border-white' + allMods + ' ' + props.classes href=props.href target="_blank")&attributes(attributes)
