--- a/src/blocks/info-tip/info-tip.pug
+++ b/src/blocks/info-tip/info-tip.pug
@@ -12,5 +12,5 @@ mixin info-tip(props={}, mods)
       }
     }
 
-  .info-tip(class=allMods)&attributes(attributes)
+  span.info-tip(class=allMods)&attributes(attributes)
     +svg('info','',{width:'14',height:'14'})(class="filter__info")
