--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -4,10 +4,10 @@ $tw-current: undefined;
 $tw-transparent: undefined; 
 $tw-black: #14142B; 
 $tw-slate-50: #f8fafc; 
-$tw-slate-100: #f1f5f9; 
+$tw-slate-100: #EDF0F6; 
 $tw-slate-200: #EBF3F6; 
 $tw-slate-300: #cbd5e1; 
-$tw-slate-400: #94a3b8; 
+$tw-slate-400: #96a3bb; 
 $tw-slate-500: #64748b; 
 $tw-slate-600: #475569; 
 $tw-slate-700: #334155; 
@@ -52,7 +52,16 @@ $tw-emerald: undefined;
 $tw-teal: undefined; 
 $tw-cyan: undefined; 
 $tw-sky: undefined; 
-$tw-blue: #0075DA; 
+$tw-blue-50: #F3F8FA; 
+$tw-blue-100: #dbeafe; 
+$tw-blue-200: #bfdbfe; 
+$tw-blue-300: #93c5fd; 
+$tw-blue-400: #60a5fa; 
+$tw-blue-500: #3b82f6; 
+$tw-blue-600: #2563eb; 
+$tw-blue-700: #1d4ed8; 
+$tw-blue-800: #196f93; 
+$tw-blue-900: #0075DA; 
 $tw-blue_link: #007CD3; 
 $tw-indigo: undefined; 
 $tw-violet: undefined; 
