--- a/src/blocks/fragment-special/fragment-special.scss
+++ b/src/blocks/fragment-special/fragment-special.scss
@@ -7,6 +7,7 @@
   $block-name:                &; // #{$block-name}__element
   position: relative;
   padding-left: 30px;
+  @apply text-lg;
 
   &::before {
     content: '';
@@ -15,6 +16,11 @@
     top: 0;
     width: 3px;
     height: 100%;
-    background-color: currentColor;
+    background-color: $tw-green-500;
+  }
+
+  @media (min-width: $screen-lg) {
+    padding-left: 40px;
+    @apply text-xl;
   }
 }
