--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -87,7 +87,7 @@
     top: -1770px; //animation page
     top: -47px; //contacts wide
     top: -6px; //contacts mobile
-    top: 0;
+    top: -12px;
     left: 0; //product.jpg
     // top: -58px;
     // left: 64px;//footer main
@@ -97,7 +97,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/pay.jpg');
+    // content: url('../screens/article-mobile.jpg');
     opacity: 1;
   }
 
@@ -966,6 +966,15 @@ body {}
 
 .inline-svg-sprite {
   display: none;
+}
+
+
+.img-cover {
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 
