--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -31,7 +31,7 @@ $tw-yellow-50: #FFFDEE;
 $tw-yellow-100: #fef9c3; 
 $tw-yellow-200: #fef08a; 
 $tw-yellow-300: #fde047; 
-$tw-yellow-400: #facc15; 
+$tw-yellow-400: #DDBA3C; 
 $tw-yellow-500: #CFB428; 
 $tw-yellow-600: #ca8a04; 
 $tw-yellow-700: #a16207; 
