--- a/src/blocks/reviews/reviews.scss
+++ b/src/blocks/reviews/reviews.scss
@@ -18,6 +18,12 @@
     }
   }
 
+  &__container {
+    @media (min-width: $screen-xxl) {
+      max-width: 1101px;
+    }
+  }
+
   &__tab-select-wrapper {
     margin-top: 20px;
     margin-bottom: 0;
