--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -535,55 +535,29 @@ block content
         +btn('Все статьи','simple').mb-20px.shrink-0
         .article-preview.article-preview__list-wrapper
           .article-preview__list.slider
-            .article-preview.slider__item.flex.xxl_w-736px
-              .article-preview__inner.xxl_flex.xxl_h-full
-                .article-preview__img.xxl_shrink-0(class="xxl_w-1/2 xxl_h-full")
-                  picture
-                    source(media="(max-width: 380px)" data-srcset="img/article-1_338x169.jpg")
-                    source(media="(max-width: 440px)" data-srcset="img/article-1_437x240.jpg")
-                    source(media="(max-width: 699px)" data-srcset="img/article-1_657x550.jpg")
-                    source(media="(max-width: 1023px)" data-srcset="img/article-1_352x370.jpg")
-                    source(media="(max-width: 1279px)" data-srcset="img/article-1_480x335.jpg")
-                    source(media="(max-width: 1439px)" data-srcset="img/article-1_606x380.jpg")
-                    source(media="(min-width: 1440px)" data-srcset="img/article-1_600x742.jpg")
-                    img.lazyload(data-src="img/article-1.jpg")
-                .article-preview__text.xxl_pt-40px
-                  .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-10px 15 марта 2022
-                  .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Лазерная терапия в комплексном лечении рожистого воспаления
-                  .article-preview__content.hidden.xxl_block.xxl_flex-grow.xxl_overflow-hidden.xxl_w-full.xxl_mb-30px
-                    .article-preview__content-inner.text-base.text-gray-500.max-h-full.article-preview__ellipsis.xl_pr-10px Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
-                  +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px xxl_shrink-0")
-            .article-preview.slider__item.xxl_w-397px
-              .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
-                .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
-                  picture
-                    source(media="(max-width: 380px)" data-srcset="img/article-1_338x169.jpg")
-                    source(media="(max-width: 440px)" data-srcset="img/article-1_437x240.jpg")
-                    source(media="(max-width: 699px)" data-srcset="img/article-1_657x550.jpg")
-                    source(media="(max-width: 1023px)" data-srcset="img/article-1_352x370.jpg")
-                    source(media="(max-width: 1279px)" data-srcset="img/article-1_480x335.jpg")
-                    source(media="(max-width: 1439px)" data-srcset="img/article-1_606x380.jpg")
-                    source(media="(min-width: 1440px)" data-srcset="img/article-1_600x742.jpg")
-                    img.lazyload(data-src="img/article-1.jpg")
-                .article-preview__text.xxl_pt-30px.xxl_shrink-0
+            .article-preview.slider__item
+              .article-preview__inner.xxl_flex.xxl_flex-col
+                .article-preview__img
+                  img.lazyload(data-src="img/article-1.jpg")
+                .article-preview__text.xxl_pt-30px
                   .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                   .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                   .article-preview__content.hidden
                   +btn('Подробнее','simple')(class="text-md mt-10px")
-            .article-preview.slider__item.xxl_w-390px
-              .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
-                .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
+            .article-preview.slider__item
+              .article-preview__inner.xxl_flex.xxl_flex-col
+                .article-preview__img
                   img.lazyload(data-src="img/article-2.jpg")
-                .article-preview__text.xxl_pt-30px.xxl_shrink-0
+                .article-preview__text.xxl_pt-30px
                   .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                   .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                   .article-preview__content.hidden
                   +btn('Подробнее','simple')(class="text-md mt-10px")
-            .article-preview.slider__item.xxl_w-390px
-              .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
-                .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
+            .article-preview.slider__item
+              .article-preview__inner.xxl_flex.xxl_flex-col
+                .article-preview__img
                   img.lazyload(data-src="img/article-2.jpg")
-                .article-preview__text.xxl_pt-30px.xxl_shrink-0
+                .article-preview__text.xxl_pt-30px
                   .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                   .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                   .article-preview__content.hidden
