cart dots corrections and some others

--- a/src/blocks/cart-aside/cart-aside.pug
+++ b/src/blocks/cart-aside/cart-aside.pug
@@ -20,4 +20,4 @@ mixin cart-aside(text, mods)
 
   .cart-aside(class=allMods)&attributes(attributes)
     .cart-aside__inner
-      +cart('has-goods')
+      +cart()
